# Visual_Servo_C

./: CMakeLists.txt  main.cpp
GalaxySDK/: Bot.cpp  Bot_clamp.cpp  Bot_line.cpp  CMakeLists.txt  GalaxyCamera.cpp  GalaxyCamera.h  main.cpp  new_topC.cpp  test.cpp  test2.cpp
GalaxySDK/APIDll/Win32/: dhUSBDevice.xml
GalaxySDK/Development/C++ SDK/inc/: GXSmartPtr.h
GalaxySDK/Development/Samples/C++/: GxIAPICPPSample_VS2005.sln  GxIAPICPPSample_VS2008.sln  GxIAPICPPSample_VS2010.sln  GxIAPICPPSample_VS2013.sln  GxIAPICPPSample_VS2015.sln
GalaxySDK/Development/Samples/VC/: sample_vc6.dsw  sample_vs2005.sln  sample_vs2008.sln  sample_vs2010.sln  sample_vs2013.sln  sample_vs2015.sln  常见问题解答.docx
GalaxySDK/last/: GetPictrue.cpp  Getmapparam.cpp  JawPosition.cpp  Match.cpp  ddd.cpp  jaw.cpp  laji.cpp  param.md  test.cpp  zzz.cpp
MVSDK/: CMakeLists.txt  MVConfig.cpp  MVConfig.h  main.cpp
MVSDK/Demo/C#/: Demo.sln
MVSDK/Demo/C#/Advanced/: Advanced.cs  Advanced.csproj  Settings.cs
MVSDK/Demo/C#/Basic/: BasicForm.cs
MVSDK/Demo/C#/FirstStep/: Form1.cs
MVSDK/Demo/C#/GPIO/: Form1.Designer.cs  Form1.cs  GPIO.csproj  Program.cs
MVSDK/Demo/C#/Halcon/: Form1.cs
MVSDK/Demo/C#/MVSDK/: MVSDK.cs  MVSDK.csproj
MVSDK/Demo/C#/ROI/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Program.cs  ROI.csproj
MVSDK/Demo/C#/Record/: Form1.Designer.cs  Form1.cs  Program.cs  Record.csproj
MVSDK/Demo/C#/SaveImage/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  SaveImage.csproj  Settings.cs  app.config
MVSDK/Demo/C#/TriggerAndStrobe/: Form1.Designer.cs  Form1.cs  Program.cs  TriggerAndStrobe.csproj
MVSDK/Demo/C#/TwoCameras/: BasicForm.cs
MVSDK/Demo/C#/WpfFirstStep/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfFirstStep.csproj
MVSDK/Demo/C++ builder/: MVCAMSDK.LIB  basic.bpr  basic.cpp  basic.tds  mainform.cpp  mainform.dfm  mainform.h
MVSDK/Demo/Delphi6/Basic1/: Main.dcu  Main.dfm  Main.pas
MVSDK/Demo/Delphi6/Basic2/: Basic.cfg  Basic.dpr  Main.dcu  Main.dfm  Main.pas  TSnapshot.dcu
MVSDK/Demo/Delphi6/FirstStep/: Project1.dpr  Unit1.dcu  Unit1.dfm  Unit1.dpr
MVSDK/Demo/Delphi6/TwoCameras/: Basic.dpr  Main.dcu  Main.dfm  Main.pas  Snapshot.dfm  Snapshot.pas  TSnapshot.dcu  TSnapshot.pas
MVSDK/Demo/Delphi6/Units/: CameraApi.dcu  CameraApi.pas  CameraDefine.dcu  CameraDefine.pas  CameraStatus.dcu  CameraStatus.pas
MVSDK/Demo/LabView/useActiveX/: IndustrialCamera.ocx  如果提示无法加载控件请运行本脚本.bat
MVSDK/Demo/LabView/useIMAQ/: Camera.lvlps  Camera.lvproj  Capture.vi
MVSDK/Demo/QT/: MVCAMSDK.lib
MVSDK/Demo/QT/Advanced/: QTdemo.vcxproj  QTdemo.vcxproj.filters  mainwindow.cpp
MVSDK/Demo/QT/Include/: CameraApi.h  CameraDefine.H
MVSDK/Demo/QT5/: QT5.pro  QT5Demo.sln  QT5Demo.vcxproj  QT5Demo.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h
MVSDK/Demo/VB6/Basic/: Basic.vbp  Basic.vbw  Form1.frm  Form1.frx
MVSDK/Demo/VB6/FirstStep/: FirstStep.vbp  FirstStep.vbw  Form1.frm  MSSCCPRJ.SCC
MVSDK/Demo/VB6/FirstStepMulti/: FirstStepMulti.vbp  FirstStepMulti.vbw  Form1.frm  MSSCCPRJ.SCC
MVSDK/Demo/VB6/Module/: CameraApi.bas  CameraDefine.bas  CameraStatus.bas  CameraVb6Core.bas
MVSDK/Demo/VB6/OCX/: Basic.vbp  Basic.vbw  Form1.frm
MVSDK/Demo/VB6/TriggerAndStrobe/: Basic.vbp  Basic.vbw  Form1.frm
MVSDK/Demo/VB6/TwoCamera/: Form1.frm  MSSCCPRJ.SCC  TwoCamera.vbp  TwoCamera.vbw
MVSDK/Demo/VB6/eVision(彩色相机)/: Basic.vbw  Form1.frm  MSSCCPRJ.SCC
MVSDK/Demo/VB6/eVision(黑白相机)/: Basic.vbp  Basic.vbw  Form1.frm
MVSDK/Demo/VBdotNET/BasicAttributes/: BasicAttributes.sln
MVSDK/Demo/VBdotNET/Basic_vbnet/: Basic_vbnet.vbproj  CameraDefine.bas  CameraVbCore.bas  Form1.Designer.vb  Form1.vb  Form2.Designer.vb  Form2.vb  Form3.Designer.vb  Form3.vb
MVSDK/Demo/VBdotNET/FirstStep/: CameraApi.vb  FirstStep.sln  FirstStep.vbproj  Form1.Designer.vb  Form1.vb
MVSDK/Demo/VBdotNET/Halcon4/: Form1.Designer.vb  Form1.vb  Halcon4.sln  Halcon4.vbproj
MVSDK/Demo/VBdotNET/MultiCamera/: Camera.vb  Form1.Designer.vb  Form1.vb  MultiCamera.sln  MultiCamera.vbproj
MVSDK/Demo/VBdotNET/TwoCameras/: CameraApi.bas  CameraStatus.bas  CameraVbCore.bas  Form1.Designer.vb  Form1.vb  TwoCameras.vbproj
MVSDK/Demo/VC++/: VS2010_demo.sln
MVSDK/Demo/VC++/Advanced/: Advanced.cpp  Advanced.h  Advanced.rc  AdvancedDlg.cpp  AdvancedDlg.h  ReadMe.txt  SdkCallTrace.cpp  SdkCallTrace.h  StdAfx.cpp  StdAfx.h  UdefClrTmp.cpp  UdefClrTmp.h  resource.h
MVSDK/Demo/VC++/Basic/: Basic.rc  BasicDlg.cpp  BasicDlg.h  resource.h
MVSDK/Demo/VC++/BasicEx/: Basic.rc  BasicDlg.cpp  BasicDlg.h  Resource.h
MVSDK/Demo/VC++/CameraDisplay/: CameraDisplay.cpp  CameraDisplay.h  CameraDisplay.rc  CameraDisplay.vcxproj  resource.h  (+5 more)
MVSDK/X64/: CXPCamera_X64.Interface  MindVision64.ax  Usb2Camera0_x64.Interface  Usb2Camera1_X64.Interface  Usb2Camera2_X64.Interface
MVSDK/x32/: IndustrialCamera.ocx  MindVision.ax  MindVision.ds  Usb2Camera0.Interface  Usb2Camera1.Interface  Usb2Camera2.Interface
(+883 files in other folders)
